# notquickshell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  example.ini  flake.nix  justfile  shell.nix
.github/: README.md
src/: :w  main.cpp
src/bar/: bar.cpp  bar.hpp  battery.cpp  battery.hpp  clock.cpp  clock.hpp  window_title.cpp  window_title.hpp  wireplumber.cpp  wireplumber.hpp  workspace.hpp  workspaces.cpp  workspaces.hpp
src/bar/volume/: volume_button.cpp  volume_button.hpp  volume_window.cpp  volume_window.hpp
src/bar/wallpaper_selector/: wallpaper_selector.cpp  wallpaper_selector.hpp
src/bar/workspaces/: module.hpp
src/ini/: ini.cpp  ini.hpp
src/ipc/hyprland/: ipc.cpp  ipc.hpp  workspace.hpp
src/theme/: core.hpp  theme.hpp
src/theme/themes/catppuccin/: frappe.hpp  latte.hpp  macchiato.hpp  mocha.hpp
src/util/: is_int.cpp  is_int.hpp
